fix: title margin-top on small smartphones

--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -97,7 +97,7 @@
 /* Basso: 601px - 750px altezza */
 @media (min-height: 601px) and (max-height: 750px) {
   .wedding-title {
-    margin: 25vh auto 0 auto;
+    margin: 20vh auto 0 auto;
     font-size: 3em;
   }
 
